# mac-disk-cleaner

./: Cargo.toml  README.md  run.sh
src/: analyzer.rs  main.rs  scanner.rs  ui.rs
src/analyzer/: analysis.rs  category.rs  mod.rs  rules.rs
src/cleaner/: mod.rs  operations.rs
src/models/: file_entry.rs  mod.rs  scan_progress.rs  scan_result.rs  storage.rs
src/scanner/: classify.rs  dir_calculator.rs  fs_ops.rs  mod.rs  progress.rs  scanner.rs  skip.rs  utils.rs  walk.rs
src/ui/: app.rs  colors.rs  mod.rs  render_home.rs  render_main.rs  render_results.rs  render_scanning.rs  types.rs
src/ui/app/: deletion.rs  entries.rs  mod.rs  navigation.rs  run.rs  scan.rs  state.rs
src/ui/components/: dialogs.rs  file_list.rs  footer.rs  header.rs  mod.rs  stats.rs  storage_gauge.rs
src/ui/handlers/: input.rs  mod.rs  mouse.rs
src/ui/screens/: all_files.rs  home.rs  mod.rs  results.rs  scanning.rs
src/web/: dto.rs  mod.rs  server.rs  sysmon.rs
src/web/assets/: app.js  index.html  style.css
src/web/assets/css/: base.css  cleaner.css  dashboard.css  system.css
src/web/assets/js/: app.js
src/web/assets/js/components/: sidebar.js
src/web/assets/js/lib/: api.js  format.js  metrics.js
src/web/assets/js/pages/: cleaner.js  dashboard.js  system.js
src/web/dto/: build.rs  mod.rs  types.rs
src/web/server/: assets.rs  handlers.rs  mod.rs  state.rs
src/web/sysmon/: dto.rs  mod.rs  monitor.rs
