[package]
name = "disk-cleaner"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
humansize = "2.1"
indicatif = "0.17"
dirs = "5.0"
libc = "0.2"