[package]
name = "disk-cleaner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
humansize = "2.1"
dirs = "5.0"
libc = "0.2"
axum = "0.7"
async-stream = "0.3"
futures = "0.3"
sysinfo = "0.39.5"
